tables made smaller
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5888 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -2,20 +2,65 @@
 % or \documentclass[page-classic]{epl2} for one column style
 
 \title{Measurement of proton-proton elastic scattering and total cross-section at $\sqrt s = 7\,\rm TeV$}
-\shorttitle{Title} %Insert here a short version of the title if it exceeds 70 characters
+\shorttitle{Measurement of $\rm pp$ elastic scattering and total cross-section at $\sqrt s = 7\,\rm TeV$} %Insert here a short version of the title if it exceeds 70 characters
 
-\author{F. Author\inst{1,2} \and S. Author\inst{1} \and T. Author\inst{2}}
-\shortauthor{F. Author \etal}
-
-\institute{                    
-  \inst{1} First Institute - Address\\
-  \inst{2} Second Institute - Address
+\author{%
+The TOTEM Collaboration -- !! THIS IS JUST A PLACEHOLDER !! \\
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8}, V. Berardi\inst{5b,5a},
+G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst{8}, J. Baechler\inst{8} \and V. Berardi\inst{5b,5a}
+%\thanks{bla}
 }
+
+\shortauthor{G.~Atchev \etal}
+
+\institute{%
+	\inst{1a} Institute of Physics of the Academy of Sciences of the Czech Republic - Praha, Czech Republic, EU\\
+	\inst{1b} Czech Technical University - Praha, Czech Republic, EU\\
+	\inst{2} National Institute of Chemical Physics and Biophysics NICPB Tallinn, Estonia, EU\\
+	\inst{3a} Helsinki Institute of Physics - Helsinki, Finland, EU\\
+	\inst{3b} Department of Physics, University of Helsinki - Helsinki, Finland, EU\\
+	\inst{4} MTA KFKI RMKI - Budapest, Hungary, EU\\
+	\inst{5a} INFN Sezione di Bari - Bari, Italy, EU\\
+	\inst{5b} Dipartimento Interateneo di Fisica di Bari - Bari, Italy, EU\\
+	\inst{6a} Sezione INFN di Genova - Genova, Italy, EU\\
+	\inst{6b} Universit\` a degli Studi di Genova - Genova, Italy, EU\\
+	\inst{7a} INFN Sezione di Pisa - Pisa, Italy, EU\\
+	\inst{7b} Universit\` a degli Studi di Siena and Gruppo Collegato INFN di Siena - Siena, Italy, EU\\
+	\inst{8} CERN - Geneva, Switzerland\\
+	\inst{9} Case Western Reserve University, Department of Physics - Cleveland, OH, USA\\
+	\inst{10} Penn State University, Department of Physics - University Park, PA, USA
+}
+
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
 
 
-\abstract{
-Abstract of the paper.}
+\abstract{%
+!! THIS IS JUST A PLACEHOLDER !!\\
+TOTEM has measured the differential cross-section for elastic proton-proton scattering
+at the LHC energy of √
+s = 7 TeV analysing data from a short run with dedicated large-β∗ optics.
+A single exponential fit with a slope B = (20.1 0.2stat 0.3syst ) GeV−2 describes the range of the
+± ±four-momentum transfer squared from 0.02 to 0.33 GeV2. After the extrapolation to = 0,
+|t| |t|a total elastic scattering cross-section of (24.8 0.2stat 1.2syst) mb was obtained. Applying
+± ±the optical theorem and using the luminosity measurement from CMS, a total proton-proton
+cross-section of (98.3 0.2stat 2.8syst) mb was deduced which is in good agreement with the
+± ±expectation from the overall fit of previously measured data over a large range of center-of-mass
+energies. From the total and elastic pp cross-section measurements, an inelastic pp cross-section
+of (73.5 0.6stat +1.8
+ syst) mb was inferred.
+± −1.3
+}
 
 
 \def\d{{\rm d}}
@@ -24,10 +69,10 @@ Abstract of the paper.}
 \def\unt#1{[{\rm #1}]}
 \def\e{{\rm e}}
 
-\setbox123\hbox{$0$}
-\setbox124\hbox{$.$}
+\setbox123\hbox{\small$0$}
 \def\S{\hbox to\wd123{\hss}}
-\def\.{\hbox to\wd124{\hss}}
+\setbox124\hbox{\small$_{0}$}
+\def\s{\hbox to\wd124{\hss}}
 
 
 \begin{document}
@@ -121,7 +166,7 @@ Three complementary methods were applied. First, the RP motor control was calibr
 The cuts used to select the elastic events are summarized in Tab.~\ref{cuts}. The cuts 1 and 2 require the reconstructed track collinearity between the left and right arms. The cuts 3-6 effectively work as low-$\xi$ cuts. If $\xi$ is non-negligible, the vertex ($x^*$) reconstruction Eq.~\ref{reconstruction} is broken. So is the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$). The cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{hit dist}.
 
 \begin{table}
-\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units.}
+\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units. TODO: threshold = 1 sigma, cuts applied at 3 sigma}
 \label{cuts}
 \begin{center}
 \begin{tabular}{ccc}\hline
@@ -254,60 +299,56 @@ Tab.~\ref{data medium t} gives the $\d\sigma_{\rm el}/\d t$ continuation to high
 \end{center}
 \end{figure*}
 
+\setlength{\tabcolsep}{3.8pt}
 
 \begin{largetable}
-\caption{The elastic differential cross section determined in this analysis. Some details on the systematic uncertainty calculation can be found in Tab.~\ref{systematics}. This table can also be used to evaluate the correlations of the systematic uncertainties among the bins (the three contributions are independent).}
+\caption{The elastic differential cross section determined in this analysis. Some details on the systematic uncertainty calculation can be found in Tab.~\ref{systematics}. That table can also be used to evaluate the correlations of the systematic uncertainties among the bins (the three contributions are independent).}
 \label{data low t}
 \begin{center}
 %\vskip-3mm
-\begin{tabular}{cccccccc}
-%\hline
-%$|t| \ung{GeV^2}$ & \multispan3 \hfil$\d \sigma_{\rm el}/\d t \ung{mb/GeV^2}$\hfil \cr
-%&&stat&syst\cr
-\multispan2\hrulefill&&\multispan2\hrulefill&&\multispan2\hrulefill\cr
-$|t|$ & $\d \sigma_{\rm el}/\d t \ung{mb/GeV^2}$ &&
-$|t|$ & $\d \sigma_{\rm el}/\d t \ung{mb/GeV^2}$ &&
-$|t|$ & $\d \sigma_{\rm el}/\d t \ung{mb/GeV^2}$ \cr
-$\unt{GeV^2}$ & \S\S\S\.\S$\pm$stat\S $\pm$syst\S\. &&
-$\unt{GeV^2}$ & \S\S\S\.\S$\pm$stat\S $\pm$syst\S\. &&
-$\unt{GeV^2}$ & \S\S\S\.\S$\pm$stat\S $\pm$syst\S\. \cr
-\multispan2\hrulefill&&\multispan2\hrulefill&&\multispan2\hrulefill\cr
-$0.00515$ & $465.\S\S \pm 27.\S\S \pm 21.\S\S$ & & $0.0691$ & $129.00 \pm 0.96 \pm 5.45$ & & $0.171$ & $16.92\S\S \pm 0.30\S\S \pm 0.91\S\S$\cr
-$0.00650$ & $465.\S\S \pm 11.\S\S \pm 21.\S\S$ & & $0.0716$ & $120.53 \pm 0.91 \pm 5.10$ & & $0.175$ & $15.20\S\S \pm 0.29\S\S \pm 0.83\S\S$\cr
-$0.00818$ & $437.5\S \pm \S5.0\S \pm 19.1\S$ & & $0.0742$ & $115.10 \pm 0.89 \pm 4.88$ & & $0.180$ & $13.90\S\S \pm 0.28\S\S \pm 0.78\S\S$\cr
-$0.00995$ & $411.0\S \pm \S3.3\S \pm 17.7\S$ & & $0.0769$ & $109.63 \pm 0.86 \pm 4.65$ & & $0.185$ & $12.09\S\S \pm 0.26\S\S \pm 0.69\S\S$\cr
-$0.0117\S$ & $402.3\S \pm \S2.9\S \pm 17.3\S$ & & $0.0795$ & $104.97 \pm 0.83 \pm 4.46$ & & $0.190$ & $11.26\S\S \pm 0.25\S\S \pm 0.66\S\S$\cr
-$0.0135\S$ & $384.5\S \pm \S2.6\S \pm 16.5\S$ & & $0.0823$ & $100.22 \pm 0.80 \pm 4.27$ & & $0.196$ & $10.11\S\S \pm 0.23\S\S \pm 0.61\S\S$\cr
-$0.0154\S$ & $378.0\S \pm \S2.4\S \pm 16.2\S$ & & $0.0850$ & $\S93.18 \pm 0.76 \pm 3.97$ & & $0.201$ & $\S9.31\S\S \pm 0.22\S\S \pm 0.57\S\S$\cr
-$0.0172\S$ & $360.3\S \pm \S2.3\S \pm 15.4\S$ & & $0.0878$ & $\S89.16 \pm 0.74 \pm 3.81$ & & $0.207$ & $\S8.07\S\S \pm 0.21\S\S \pm 0.51\S\S$\cr
-$0.0191\S$ & $348.1\S \pm \S2.2\S \pm 14.9\S$ & & $0.0907$ & $\S81.78 \pm 0.70 \pm 3.50$ & & $0.213$ & $\S6.98\S\S \pm 0.19\S\S \pm 0.45\S\S$\cr
-$0.0210\S$ & $337.0\S \pm \S2.1\S \pm 14.4\S$ & & $0.0936$ & $\S78.85 \pm 0.68 \pm 3.38$ & & $0.219$ & $\S6.22\S\S \pm 0.17\S\S \pm 0.42\S\S$\cr
-$0.0229\S$ & $325.0\S \pm \S2.0\S \pm 13.9\S$ & & $0.0966$ & $\S73.92 \pm 0.65 \pm 3.17$ & & $0.225$ & $\S5.38\S\S \pm 0.16\S\S \pm 0.37\S\S$\cr
-$0.0248\S$ & $307.9\S \pm \S1.9\S \pm 13.1\S$ & & $0.0996$ & $\S68.77 \pm 0.62 \pm 2.96$ & & $0.232$ & $\S4.40\S\S \pm 0.14\S\S \pm 0.31\S\S$\cr
-$0.0268\S$ & $296.7\S \pm \S1.8\S \pm 12.7\S$ & & $0.103\S$ & $\S65.53 \pm 0.60 \pm 2.82$ & & $0.239$ & $\S4.25\S\S \pm 0.14\S\S \pm 0.31\S\S$\cr
-$0.0287\S$ & $285.9\S \pm \S1.8\S \pm 12.2\S$ & & $0.106\S$ & $\S61.90 \pm 0.58 \pm 2.66$ & & $0.246$ & $\S3.47\S\S \pm 0.13\S\S \pm 0.26\S\S$\cr
-$0.0307\S$ & $275.3\S \pm \S1.7\S \pm 11.7\S$ & & $0.109\S$ & $\S58.11 \pm 0.55 \pm 2.50$ & & $0.253$ & $\S2.82\S\S \pm 0.11\S\S \pm 0.22\S\S$\cr
-$0.0328\S$ & $263.0\S \pm \S1.6\S \pm 11.2\S$ & & $0.112\S$ & $\S54.11 \pm 0.53 \pm 2.33$ & & $0.261$ & $\S2.52\S\S \pm 0.10\S\S \pm 0.20\S\S$\cr
-$0.0348\S$ & $252.0\S \pm \S1.6\S \pm 10.7\S$ & & $0.116\S$ & $\S51.21 \pm 0.51 \pm 2.20$ & & $0.270$ & $\S2.142\S \pm 0.097\S \pm 0.178\S$\cr
-$0.0369\S$ & $242.8\S \pm \S1.5\S \pm 10.3\S$ & & $0.119\S$ & $\S48.24 \pm 0.49 \pm 2.07$ & & $0.278$ & $\S1.824\S \pm 0.086\S \pm 0.157\S$\cr
-$0.0390\S$ & $231.6\S \pm \S1.5\S \pm \S9.8\S$ & & $0.122\S$ & $\S44.99 \pm 0.46 \pm 1.96$ & & $0.287$ & $\S1.455\S \pm 0.075\S \pm 0.129\S$\cr
-$0.0411\S$ & $222.2\S \pm \S1.4\S \pm \S9.4\S$ & & $0.126\S$ & $\S42.74 \pm 0.45 \pm 1.89$ & & $0.297$ & $\S1.257\S \pm 0.069\S \pm 0.116\S$\cr
-$0.0433\S$ & $210.9\S \pm \S1.4\S \pm \S8.9\S$ & & $0.130\S$ & $\S39.49 \pm 0.43 \pm 1.77$ & & $0.307$ & $\S0.848\S \pm 0.055\S \pm 0.081\S$\cr
-$0.0455\S$ & $204.8\S \pm \S1.3\S \pm \S8.7\S$ & & $0.133\S$ & $\S35.75 \pm 0.43 \pm 1.63$ & & $0.318$ & $\S0.633\S \pm 0.046\S \pm 0.063\S$\cr
-$0.0477\S$ & $197.2\S \pm \S1.3\S \pm \S8.3\S$ & & $0.137\S$ & $\S33.63 \pm 0.41 \pm 1.56$ & & $0.330$ & $\S0.558\S \pm 0.043\S \pm 0.058\S$\cr
-$0.0499\S$ & $187.5\S \pm \S1.3\S \pm \S7.9\S$ & & $0.141\S$ & $\S31.08 \pm 0.41 \pm 1.47$ & & $0.342$ & $\S0.417\S \pm 0.038\S \pm 0.045\S$\cr
-$0.0522\S$ & $178.1\S \pm \S1.2\S \pm \S7.5\S$ & & $0.145\S$ & $\S28.91 \pm 0.39 \pm 1.39$ & & $0.356$ & $\S0.269\S \pm 0.027\S \pm 0.030\S$\cr
-$0.0545\S$ & $168.8\S \pm \S1.2\S \pm \S7.1\S$ & & $0.149\S$ & $\S25.65 \pm 0.38 \pm 1.25$ & & $0.371$ & $\S0.235\S \pm 0.025\S \pm 0.028\S$\cr
-$0.0569\S$ & $162.5\S \pm \S1.1\S \pm \S6.8\S$ & & $0.153\S$ & $\S24.16 \pm 0.36 \pm 1.20$ & & $0.387$ & $\S0.136\S \pm 0.019\S \pm 0.017\S$\cr
-$0.0592\S$ & $155.5\S \pm \S1.1\S \pm \S6.5\S$ & & $0.157\S$ & $\S22.35 \pm 0.35 \pm 1.13$ & & $0.405$ & $\S0.109\S \pm 0.016\S \pm 0.014\S$\cr
-$0.0616\S$ & $149.4\S \pm \S1.1\S \pm \S6.3\S$ & & $0.162\S$ & $\S20.22 \pm 0.34 \pm 1.04$ & & $0.425$ & $\S0.0575 \pm 0.0110 \pm 0.0079$\cr
-$0.0641\S$ & $140.2\S \pm \S1.0\S \pm \S5.9\S$ & & $0.166\S$ & $\S19.01 \pm 0.32 \pm 1.00$ & & $0.448$ & $\S0.0285 \pm 0.0072 \pm 0.0042$\cr
-\multispan2&&\multispan2\hrulefill&&\multispan2\hrulefill\cr
-$0.0666\S$ & $135.10 \pm \S0.99 \pm \S5.70$ \cr
-\multispan2\hrulefill&&\multispan2&&\multispan2\cr
+\small
+\begin{tabular}{cc@{$\pm$}c@{$\pm$}cccc@{$\pm$}c@{$\pm$}cccc@{$\pm$}c@{$\pm$}cccc@{$\pm$}c@{$\pm$}c}
+\multispan4\hrulefill&&\multispan4\hrulefill&&\multispan4\hrulefill&&\multispan4\hrulefill\cr
+$|t|$ & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss&&
+$|t|$ & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss&&
+$|t|$ & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss&&
+$|t|$ & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss
+\cr
+$\unt{GeV^2}$ &&stat&syst&&
+$\unt{GeV^2}$ &&stat&syst&&
+$\unt{GeV^2}$ &&stat&syst&&
+$\unt{GeV^2}$ &&stat&syst
+\cr
+\multispan4\hrulefill&&\multispan4\hrulefill&&\multispan4\hrulefill&&\multispan4\hrulefill\cr
+$0.00515$ & $465.\S$ & $27.\S$ & $21.\S$ && $0.0499$ & $187.5\S$ & $1.3\S$ & $7.9\S$ && $0.112$ & $54.11$ & $0.53$ & $2.33$ && $0.213$ & $6.98\S\S$ & $0.19\S\S$ & $0.45\S\S$ \cr
+$0.00650$ & $465.\S$ & $11.\S$ & $21.\S$ && $0.0522$ & $178.1\S$ & $1.2\S$ & $7.5\S$ && $0.116$ & $51.21$ & $0.51$ & $2.20$ && $0.219$ & $6.22\S\S$ & $0.17\S\S$ & $0.42\S\S$ \cr
+$0.00818$ & $437.5$ & $\S5.0$ & $19.1$ && $0.0545$ & $168.8\S$ & $1.2\S$ & $7.1\S$ && $0.119$ & $48.24$ & $0.49$ & $2.07$ && $0.225$ & $5.38\S\S$ & $0.16\S\S$ & $0.37\S\S$ \cr
+$0.00995$ & $411.0$ & $\S3.3$ & $17.7$ && $0.0569$ & $162.5\S$ & $1.1\S$ & $6.8\S$ && $0.122$ & $44.99$ & $0.46$ & $1.96$ && $0.232$ & $4.40\S\S$ & $0.14\S\S$ & $0.31\S\S$ \cr
+$0.0117\S$ & $402.3$ & $\S2.9$ & $17.3$ && $0.0592$ & $155.5\S$ & $1.1\S$ & $6.5\S$ && $0.126$ & $42.74$ & $0.45$ & $1.89$ && $0.239$ & $4.25\S\S$ & $0.14\S\S$ & $0.31\S\S$ \cr
+$0.0135\S$ & $384.5$ & $\S2.6$ & $16.5$ && $0.0616$ & $149.4\S$ & $1.1\S$ & $6.3\S$ && $0.130$ & $39.49$ & $0.43$ & $1.77$ && $0.246$ & $3.47\S\S$ & $0.13\S\S$ & $0.26\S\S$ \cr
+$0.0154\S$ & $378.0$ & $\S2.4$ & $16.2$ && $0.0641$ & $140.2\S$ & $1.0\S$ & $5.9\S$ && $0.133$ & $35.75$ & $0.43$ & $1.63$ && $0.253$ & $2.82\S\S$ & $0.11\S\S$ & $0.22\S\S$ \cr
+$0.0172\S$ & $360.3$ & $\S2.3$ & $15.4$ && $0.0666$ & $135.10$ & $0.99$ & $5.70$ && $0.137$ & $33.63$ & $0.41$ & $1.56$ && $0.261$ & $2.52\S\S$ & $0.10\S\S$ & $0.20\S\S$ \cr
+$0.0191\S$ & $348.1$ & $\S2.2$ & $14.9$ && $0.0691$ & $129.00$ & $0.96$ & $5.45$ && $0.141$ & $31.08$ & $0.41$ & $1.47$ && $0.270$ & $2.142\S$ & $0.097\S$ & $0.178\S$ \cr
+$0.0210\S$ & $337.0$ & $\S2.1$ & $14.4$ && $0.0716$ & $120.53$ & $0.91$ & $5.10$ && $0.145$ & $28.91$ & $0.39$ & $1.39$ && $0.278$ & $1.824\S$ & $0.086\S$ & $0.157\S$ \cr
+$0.0229\S$ & $325.0$ & $\S2.0$ & $13.9$ && $0.0742$ & $115.10$ & $0.89$ & $4.88$ && $0.149$ & $25.65$ & $0.38$ & $1.25$ && $0.287$ & $1.455\S$ & $0.075\S$ & $0.129\S$ \cr
+$0.0248\S$ & $307.9$ & $\S1.9$ & $13.1$ && $0.0769$ & $109.63$ & $0.86$ & $4.65$ && $0.153$ & $24.16$ & $0.36$ & $1.20$ && $0.297$ & $1.257\S$ & $0.069\S$ & $0.116\S$ \cr
+$0.0268\S$ & $296.7$ & $\S1.8$ & $12.7$ && $0.0795$ & $104.97$ & $0.83$ & $4.46$ && $0.157$ & $22.35$ & $0.35$ & $1.13$ && $0.307$ & $0.848\S$ & $0.055\S$ & $0.081\S$ \cr
+$0.0287\S$ & $285.9$ & $\S1.8$ & $12.2$ && $0.0823$ & $100.22$ & $0.80$ & $4.27$ && $0.162$ & $20.22$ & $0.34$ & $1.04$ && $0.318$ & $0.633\S$ & $0.046\S$ & $0.063\S$ \cr
+$0.0307\S$ & $275.3$ & $\S1.7$ & $11.7$ && $0.0850$ & $\S93.18$ & $0.76$ & $3.97$ && $0.166$ & $19.01$ & $0.32$ & $1.00$ && $0.330$ & $0.558\S$ & $0.043\S$ & $0.058\S$ \cr
+$0.0328\S$ & $263.0$ & $\S1.6$ & $11.2$ && $0.0878$ & $\S89.16$ & $0.74$ & $3.81$ && $0.171$ & $16.92$ & $0.30$ & $0.91$ && $0.342$ & $0.417\S$ & $0.038\S$ & $0.045\S$ \cr
+$0.0348\S$ & $252.0$ & $\S1.6$ & $10.7$ && $0.0907$ & $\S81.78$ & $0.70$ & $3.50$ && $0.175$ & $15.20$ & $0.29$ & $0.83$ && $0.356$ & $0.269\S$ & $0.027\S$ & $0.030\S$ \cr
+$0.0369\S$ & $242.8$ & $\S1.5$ & $10.3$ && $0.0936$ & $\S78.85$ & $0.68$ & $3.38$ && $0.180$ & $13.90$ & $0.28$ & $0.78$ && $0.371$ & $0.235\S$ & $0.025\S$ & $0.028\S$ \cr
+$0.0390\S$ & $231.6$ & $\S1.5$ & $\S9.8$ && $0.0966$ & $\S73.92$ & $0.65$ & $3.17$ && $0.185$ & $12.09$ & $0.26$ & $0.69$ && $0.387$ & $0.136\S$ & $0.019\S$ & $0.017\S$ \cr
+$0.0411\S$ & $222.2$ & $\S1.4$ & $\S9.4$ && $0.0996$ & $\S68.77$ & $0.62$ & $2.96$ && $0.190$ & $11.26$ & $0.25$ & $0.66$ && $0.405$ & $0.109\S$ & $0.016\S$ & $0.014\S$ \cr
+$0.0433\S$ & $210.9$ & $\S1.4$ & $\S8.9$ && $0.103\S$ & $\S65.53$ & $0.60$ & $2.82$ && $0.196$ & $10.11$ & $0.23$ & $0.61$ && $0.425$ & $0.0575$ & $0.0110$ & $0.0079$ \cr
+$0.0455\S$ & $204.8$ & $\S1.3$ & $\S8.7$ && $0.106\S$ & $\S61.90$ & $0.58$ & $2.66$ && $0.201$ & $\S9.31$ & $0.22$ & $0.57$ && $0.448$ & $0.0285$ & $0.0072$ & $0.0042$ \cr
+\multispan4&&\multispan4&&\multispan4&&\multispan4\hrulefill\cr
+$0.0477\S$ & $197.2$ & $\S1.3$ & $\S8.3$ && $0.109\S$ & $\S58.11$ & $0.55$ & $2.50$ && $0.207$ & $\S8.07$ & $0.21$ & $0.51$ \cr
+\multispan4\hrulefill&&\multispan4\hrulefill&&\multispan4\hrulefill&\cr
 \end{tabular}
 \end{center}
 \end{largetable}
+
 
 \begin{largetable}
 \caption{The elastic differential cross section as determined in \cite{epl95}. The systematic errors almost fully correlated among the bins.
@@ -316,52 +357,45 @@ $0.0666\S$ & $135.10 \pm \S0.99 \pm \S5.70$ \cr
 \label{data medium t}
 \begin{center}
 %\vskip-3mm
-\begin{tabular}{cccccccc}
-\multispan2\hrulefill&&\multispan2\hrulefill\cr
-$|t| \ung{GeV^2}$ & $\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$ && $|t| \ung{GeV^2}$ & $\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$ \cr
-& \S\S\S\S$\pm$stat $\pm$syst && & \S\S\S\S$\pm$stat $\pm$syst\cr
-\multispan2\hrulefill&&\multispan2\hrulefill\cr
-$0.3642 \pm 0.0019$   &   $299.1\S \pm 7.6\S^{+\S71.6\S}_{-108.5\S}$  &&  $0.8309 \pm 0.0045$   &   $18.93\S\S \pm 0.73\S\S^{+5.24\S\S}_{-6.82\S\S}$ \cr
-$0.3706 \pm 0.0019$   &   $251.8\S \pm 6.4\S^{+\S60.7\S}_{-\S91.7\S}$  &&  $0.8466 \pm 0.0046$   &   $18.32\S\S \pm 0.71\S\S^{+5.07\S\S}_{-6.57\S\S}$ \cr
-$0.3772 \pm 0.0019$   &   $225.1\S \pm 5.6\S^{+\S54.7\S}_{-\S82.3\S}$  &&  $0.8628 \pm 0.0048$   &   $16.33\S\S \pm 0.64\S\S^{+4.51\S\S}_{-5.84\S\S}$ \cr
-$0.3839 \pm 0.0019$   &   $174.4\S \pm 4.6\S^{+\S42.8\S}_{-\S64.0\S}$  &&  $0.8796 \pm 0.0049$   &   $16.42\S\S \pm 0.63\S\S^{+4.53\S\S}_{-5.84\S\S}$ \cr
-$0.3907 \pm 0.0020$   &   $157.1\S \pm 4.1\S^{+\S38.8\S}_{-\S57.9\S}$  &&  $0.8965 \pm 0.0049$   &   $16.95\S\S \pm 0.64\S\S^{+4.68\S\S}_{-6.00\S\S}$ \cr
-$0.3977 \pm 0.0020$   &   $133.3\S \pm 3.5\S^{+\S33.2\S}_{-\S49.3\S}$  &&  $0.9133 \pm 0.0048$   &   $14.14\S\S \pm 0.58\S\S^{+3.90\S\S}_{-4.99\S\S}$ \cr
-$0.4049 \pm 0.0021$   &   $116.1\S \pm 3.2\S^{+\S29.2\S}_{-\S43.1\S}$  &&  $0.9305 \pm 0.0051$   &   $14.05\S\S \pm 0.56\S\S^{+3.87\S\S}_{-4.93\S\S}$ \cr
-$0.4122 \pm 0.0022$   &   $\S92.6\S \pm 2.6\S^{+\S23.5\S}_{-\S34.5\S}$  &&  $0.9481 \pm 0.0051$   &   $14.10\S\S \pm 0.57\S\S^{+3.88\S\S}_{-4.93\S\S}$ \cr
-$0.4199 \pm 0.0022$   &   $\S78.1\S \pm 2.3\S^{+\S20.0\S}_{-\S29.2\S}$  &&  $0.9662 \pm 0.0054$   &   $11.92\S\S \pm 0.49\S\S^{+3.28\S\S}_{-4.15\S\S}$ \cr
-$0.4278 \pm 0.0023$   &   $\S63.2\S \pm 1.9\S^{+\S16.3\S}_{-\S23.7\S}$  &&  $0.9852 \pm 0.0056$   &   $12.25\S\S \pm 0.49\S\S^{+3.37\S\S}_{-4.24\S\S}$ \cr
-$0.4361 \pm 0.0024$   &   $\S53.6\S \pm 1.7\S^{+\S14.0\S}_{-\S20.2\S}$  &&  $1.0047 \pm 0.0056$   &   $11.31\S\S \pm 0.47\S\S^{+3.11\S\S}_{-3.90\S\S}$ \cr
-$0.4448 \pm 0.0026$   &   $\S44.7\S \pm 1.5\S^{+\S11.8\S}_{-\S16.9\S}$  &&  $1.0242 \pm 0.0056$   &   $10.04\S\S \pm 0.44\S\S^{+2.76\S\S}_{-3.44\S\S}$ \cr
-$0.4540 \pm 0.0027$   &   $\S33.7\S \pm 1.2\S^{+\S\S9.0\S}_{-\S12.8\S}$  &&  $1.0441 \pm 0.0058$   &   $\S8.74\S\S \pm 0.40\S\S^{+2.40\S\S}_{-2.98\S\S}$ \cr
-$0.4637 \pm 0.0029$   &   $\S30.2\S \pm 1.2\S^{+\S\S8.1\S}_{-\S11.6\S}$  &&  $1.0647 \pm 0.0061$   &   $\S7.87\S\S \pm 0.37\S\S^{+2.16\S\S}_{-2.67\S\S}$ \cr
-$0.4740 \pm 0.0031$   &   $\S25.5\S \pm 1.0\S^{+\S\S7.0\S}_{-\S\S9.8\S}$  &&  $1.0862 \pm 0.0064$   &   $\S8.13\S\S \pm 0.36\S\S^{+2.23\S\S}_{-2.74\S\S}$ \cr
-$0.4848 \pm 0.0031$   &   $\S21.58 \pm 0.90^{+\S\S5.94}_{-\S\S8.35}$  &&  $1.1085 \pm 0.0065$   &   $\S7.20\S\S \pm 0.34\S\S^{+1.97\S\S}_{-2.41\S\S}$ \cr
-$0.4959 \pm 0.0033$   &   $\S19.45 \pm 0.85^{+\S\S5.42}_{-\S\S7.57}$  &&  $1.1312 \pm 0.0067$   &   $\S6.50\S\S \pm 0.32\S\S^{+1.78\S\S}_{-2.17\S\S}$ \cr
-$0.5076 \pm 0.0034$   &   $\S18.04 \pm 0.81^{+\S\S5.05}_{-\S\S7.02}$  &&  $1.1548 \pm 0.0070$   &   $\S5.09\S\S \pm 0.27\S\S^{+1.39\S\S}_{-1.68\S\S}$ \cr
-$0.5201 \pm 0.0037$   &   $\S17.08 \pm 0.76^{+\S\S4.78}_{-\S\S6.63}$  &&  $1.1794 \pm 0.0073$   &   $\S5.26\S\S \pm 0.27\S\S^{+1.44\S\S}_{-1.73\S\S}$ \cr
-$0.5332 \pm 0.0038$   &   $\S16.07 \pm 0.76^{+\S\S4.49}_{-\S\S6.22}$  &&  $1.2053 \pm 0.0077$   &   $\S4.96\S\S \pm 0.25\S\S^{+1.35\S\S}_{-1.62\S\S}$ \cr
-$0.5466 \pm 0.0039$   &   $\S16.86 \pm 0.80^{+\S\S4.71}_{-\S\S6.50}$  &&  $1.2324 \pm 0.0080$   &   $\S4.22\S\S \pm 0.23\S\S^{+1.15\S\S}_{-1.37\S\S}$ \cr
-$0.5602 \pm 0.0040$   &   $\S18.46 \pm 0.86^{+\S\S5.16}_{-\S\S7.10}$  &&  $1.2608 \pm 0.0084$   &   $\S3.40\S\S \pm 0.20\S\S^{+0.93\S\S}_{-1.09\S\S}$ \cr
-$0.5739 \pm 0.0039$   &   $\S18.26 \pm 0.85^{+\S\S5.10}_{-\S\S7.00}$  &&  $1.2905 \pm 0.0087$   &   $\S3.26\S\S \pm 0.19\S\S^{+0.89\S\S}_{-1.04\S\S}$ \cr
-$0.5877 \pm 0.0040$   &   $\S20.77 \pm 0.92^{+\S\S5.80}_{-\S\S7.94}$  &&  $1.3218 \pm 0.0094$   &   $\S2.69\S\S \pm 0.16\S\S^{+0.73\S\S}_{-0.85\S\S}$ \cr
-$0.6017 \pm 0.0040$   &   $\S22.85 \pm 0.97^{+\S\S6.37}_{-\S\S8.70}$  &&  $1.3548 \pm 0.0097$   &   $\S2.21\S\S \pm 0.14\S\S^{+0.60\S\S}_{-0.69\S\S}$ \cr
-$0.6155 \pm 0.0040$   &   $\S22.24 \pm 0.96^{+\S\S6.20}_{-\S\S8.44}$  &&  $1.390\S \pm 0.011\S$   &   $\S2.00\S\S \pm 0.13\S\S^{+0.54\S\S}_{-0.62\S\S}$ \cr
-$0.6294 \pm 0.0040$   &   $\S24.2\S \pm 1.0\S^{+\S\S6.8\S}_{-\S\S9.2\S}$  &&  $1.428\S \pm 0.011\S$   &   $\S1.63\S\S \pm 0.11\S\S^{+0.44\S\S}_{-0.50\S\S}$ \cr
-$0.6434 \pm 0.0041$   &   $\S24.65 \pm 0.99^{+\S\S6.87}_{-\S\S9.30}$  &&  $1.467\S \pm 0.011\S$   &   $\S1.47\S\S \pm 0.11\S\S^{+0.40\S\S}_{-0.45\S\S}$ \cr
-$0.6572 \pm 0.0040$   &   $\S27.4\S \pm 1.1\S^{+\S\S7.6\S}_{-\S10.3\S}$  &&  $1.507\S \pm 0.012\S$   &   $\S1.066\S \pm 0.087\S^{+0.288\S}_{-0.319\S}$ \cr
-$0.6711 \pm 0.0041$   &   $\S24.79 \pm 0.98^{+\S\S6.90}_{-\S\S9.28}$  &&  $1.552\S \pm 0.014\S$   &   $\S0.841\S \pm 0.071\S^{+0.227\S}_{-0.248\S}$ \cr
-$0.6853 \pm 0.0041$   &   $\S25.11 \pm 0.97^{+\S\S6.98}_{-\S\S9.37}$  &&  $1.603\S \pm 0.015\S$   &   $\S0.747\S \pm 0.065\S^{+0.201\S}_{-0.217\S}$ \cr
-$0.6995 \pm 0.0041$   &   $\S27.3\S \pm 1.0\S^{+\S\S7.6\S}_{-\S10.2\S}$  &&  $1.656\S \pm 0.016\S$   &   $\S0.557\S \pm 0.054\S^{+0.150\S}_{-0.159\S}$ \cr
-$0.7136 \pm 0.0040$   &   $\S26.52 \pm 0.99^{+\S\S7.37}_{-\S\S9.83}$  &&  $1.713\S \pm 0.017\S$   &   $\S0.464\S \pm 0.048\S^{+0.124\S}_{-0.130\S}$ \cr
-$0.7276 \pm 0.0041$   &   $\S25.87 \pm 0.96^{+\S\S7.19}_{-\S\S9.56}$  &&  $1.777\S \pm 0.020\S$   &   $\S0.369\S \pm 0.039\S^{+0.099\S}_{-0.101\S}$ \cr
-$0.7420 \pm 0.0042$   &   $\S25.05 \pm 0.92^{+\S\S6.95}_{-\S\S9.22}$  &&  $1.851\S \pm 0.023\S$   &   $\S0.216\S \pm 0.028\S^{+0.058\S}_{-0.058\S}$ \cr
-$0.7565 \pm 0.0042$   &   $\S26.03 \pm 0.95^{+\S\S7.22}_{-\S\S9.55}$  &&  $1.932\S \pm 0.024\S$   &   $\S0.192\S \pm 0.025\S^{+0.051\S}_{-0.050\S}$ \cr
-$0.7711 \pm 0.0043$   &   $\S24.07 \pm 0.89^{+\S\S6.67}_{-\S\S8.80}$  &&  $2.024\S \pm 0.029\S$   &   $\S0.126\S \pm 0.019\S^{+0.033\S}_{-0.032\S}$ \cr
-$0.7860 \pm 0.0043$   &   $\S23.16 \pm 0.84^{+\S\S6.42}_{-\S\S8.44}$  &&  $2.133\S \pm 0.034\S$   &   $\S0.059\S \pm 0.012\S^{+0.015\S}_{-0.014\S}$ \cr
-$0.8007 \pm 0.0042$   &   $\S21.34 \pm 0.81^{+\S\S5.91}_{-\S\S7.75}$  &&  $2.272\S \pm 0.048\S$   &   $\S0.0412 \pm 0.0083^{+0.0108}_{-0.0095}$ \cr
-$0.8156 \pm 0.0044$   &   $\S21.59 \pm 0.80^{+\S\S5.98}_{-\S\S7.81}$  &&  $2.443\S \pm 0.050\S$   &   $\S0.0230 \pm 0.0055^{+0.0060}_{-0.0049}$ \cr
-\multispan2\hrulefill&&\multispan2\hrulefill\cr
+\small
+\begin{tabular}{c@{$\pm$}cc@{$\pm$}c@{$\pm$}ccc@{$\pm$}cc@{$\pm$}c@{$\pm$}ccc@{$\pm$}cc@{$\pm$}c@{$\pm$}c}
+\multispan5\hrulefill&&\multispan5\hrulefill&&\multispan5\hrulefill\cr
+\multispan2\hss $|t| \ung{GeV^2}$\hss & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss&&
+\multispan2\hss $|t| \ung{GeV^2}$\hss & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss&&
+\multispan2\hss $|t| \ung{GeV^2}$\hss & \multispan3\hss$\d \sigma_{\rm el}/\d t \ung{\mu b/GeV^2}$\hss\cr
+\multispan2&&stat&syst&&
+\multispan2&&stat&syst&&
+\multispan2&&stat&syst\cr
+\multispan5\hrulefill&&\multispan5\hrulefill&&\multispan5\hrulefill\cr
+$0.3642$ & $0.0019$ & $299.1\S$ & $7.6\S$ & $^{\s71.6\s}_{108.5\s}$ & & $0.6434$ & $0.0041$ & $24.65$ & $0.99$ & $^{\s6.87}_{\s9.30}$ & & $1.0862$ & $0.0064$ & $8.13\S\S$ & $0.36\S\S$ & $^{2.23\s\s}_{2.74\s\s}$ \cr
+$0.3706$ & $0.0019$ & $251.8\S$ & $6.4\S$ & $^{\s60.7\s}_{\s91.7\s}$ & & $0.6572$ & $0.0040$ & $27.4\S$ & $1.1\S$ & $^{\s7.6\s}_{10.3\s}$ & & $1.1085$ & $0.0065$ & $7.20\S\S$ & $0.34\S\S$ & $^{1.97\s\s}_{2.41\s\s}$ \cr
+$0.3772$ & $0.0019$ & $225.1\S$ & $5.6\S$ & $^{\s54.7\s}_{\s82.3\s}$ & & $0.6711$ & $0.0041$ & $24.79$ & $0.98$ & $^{\s6.90}_{\s9.28}$ & & $1.1312$ & $0.0067$ & $6.50\S\S$ & $0.32\S\S$ & $^{1.78\s\s}_{2.17\s\s}$ \cr
+$0.3839$ & $0.0019$ & $174.4\S$ & $4.6\S$ & $^{\s42.8\s}_{\s64.0\s}$ & & $0.6853$ & $0.0041$ & $25.11$ & $0.97$ & $^{\s6.98}_{\s9.37}$ & & $1.1548$ & $0.0070$ & $5.09\S\S$ & $0.27\S\S$ & $^{1.39\s\s}_{1.68\s\s}$ \cr
+$0.3907$ & $0.0020$ & $157.1\S$ & $4.1\S$ & $^{\s38.8\s}_{\s57.9\s}$ & & $0.6995$ & $0.0041$ & $27.3\S$ & $1.0\S$ & $^{\s7.6\s}_{10.2\s}$ & & $1.1794$ & $0.0073$ & $5.26\S\S$ & $0.27\S\S$ & $^{1.44\s\s}_{1.73\s\s}$ \cr
+$0.3977$ & $0.0020$ & $133.3\S$ & $3.5\S$ & $^{\s33.2\s}_{\s49.3\s}$ & & $0.7136$ & $0.0040$ & $26.52$ & $0.99$ & $^{\s7.37}_{\s9.83}$ & & $1.2053$ & $0.0077$ & $4.96\S\S$ & $0.25\S\S$ & $^{1.35\s\s}_{1.62\s\s}$ \cr
+$0.4049$ & $0.0021$ & $116.1\S$ & $3.2\S$ & $^{\s29.2\s}_{\s43.1\s}$ & & $0.7276$ & $0.0041$ & $25.87$ & $0.96$ & $^{\s7.19}_{\s9.56}$ & & $1.2324$ & $0.0080$ & $4.22\S\S$ & $0.23\S\S$ & $^{1.15\s\s}_{1.37\s\s}$ \cr
+$0.4122$ & $0.0022$ & $\S92.6\S$ & $2.6\S$ & $^{\s23.5\s}_{\s34.5\s}$ & & $0.7420$ & $0.0042$ & $25.05$ & $0.92$ & $^{\s6.95}_{\s9.22}$ & & $1.2608$ & $0.0084$ & $3.40\S\S$ & $0.20\S\S$ & $^{0.93\s\s}_{1.09\s\s}$ \cr
+$0.4199$ & $0.0022$ & $\S78.1\S$ & $2.3\S$ & $^{\s20.0\s}_{\s29.2\s}$ & & $0.7565$ & $0.0042$ & $26.03$ & $0.95$ & $^{\s7.22}_{\s9.55}$ & & $1.2905$ & $0.0087$ & $3.26\S\S$ & $0.19\S\S$ & $^{0.89\s\s}_{1.04\s\s}$ \cr
+$0.4278$ & $0.0023$ & $\S63.2\S$ & $1.9\S$ & $^{\s16.3\s}_{\s23.7\s}$ & & $0.7711$ & $0.0043$ & $24.07$ & $0.89$ & $^{\s6.67}_{\s8.80}$ & & $1.3218$ & $0.0094$ & $2.69\S\S$ & $0.16\S\S$ & $^{0.73\s\s}_{0.85\s\s}$ \cr
+$0.4361$ & $0.0024$ & $\S53.6\S$ & $1.7\S$ & $^{\s14.0\s}_{\s20.2\s}$ & & $0.7860$ & $0.0043$ & $23.16$ & $0.84$ & $^{\s6.42}_{\s8.44}$ & & $1.3548$ & $0.0097$ & $2.21\S\S$ & $0.14\S\S$ & $^{0.60\s\s}_{0.69\s\s}$ \cr
+$0.4448$ & $0.0026$ & $\S44.7\S$ & $1.5\S$ & $^{\s11.8\s}_{\s16.9\s}$ & & $0.8007$ & $0.0042$ & $21.34$ & $0.81$ & $^{\s5.91}_{\s7.75}$ & & $1.390\S$ & $0.011\S$ & $2.00\S\S$ & $0.13\S\S$ & $^{0.54\s\s}_{0.62\s\s}$ \cr
+$0.4540$ & $0.0027$ & $\S33.7\S$ & $1.2\S$ & $^{\s\s9.0\s}_{\s12.8\s}$ & & $0.8156$ & $0.0044$ & $21.59$ & $0.80$ & $^{\s5.98}_{\s7.81}$ & & $1.428\S$ & $0.011\S$ & $1.63\S\S$ & $0.11\S\S$ & $^{0.44\s\s}_{0.50\s\s}$ \cr
+$0.4637$ & $0.0029$ & $\S30.2\S$ & $1.2\S$ & $^{\s\s8.1\s}_{\s11.6\s}$ & & $0.8309$ & $0.0045$ & $18.93$ & $0.73$ & $^{\s5.24}_{\s6.82}$ & & $1.467\S$ & $0.011\S$ & $1.47\S\S$ & $0.11\S\S$ & $^{0.40\s\s}_{0.45\s\s}$ \cr
+$0.4740$ & $0.0031$ & $\S25.5\S$ & $1.0\S$ & $^{\s\s7.0\s}_{\s\s9.8\s}$ & & $0.8466$ & $0.0046$ & $18.32$ & $0.71$ & $^{\s5.07}_{\s6.57}$ & & $1.507\S$ & $0.012\S$ & $1.066\S$ & $0.087\S$ & $^{0.288\s}_{0.319\s}$ \cr
+$0.4848$ & $0.0031$ & $\S21.58$ & $0.90$ & $^{\s\s5.94}_{\s\s8.35}$ & & $0.8628$ & $0.0048$ & $16.33$ & $0.64$ & $^{\s4.51}_{\s5.84}$ & & $1.552\S$ & $0.014\S$ & $0.841\S$ & $0.071\S$ & $^{0.227\s}_{0.248\s}$ \cr
+$0.4959$ & $0.0033$ & $\S19.45$ & $0.85$ & $^{\s\s5.42}_{\s\s7.57}$ & & $0.8796$ & $0.0049$ & $16.42$ & $0.63$ & $^{\s4.53}_{\s5.84}$ & & $1.603\S$ & $0.015\S$ & $0.747\S$ & $0.065\S$ & $^{0.201\s}_{0.217\s}$ \cr
+$0.5076$ & $0.0034$ & $\S18.04$ & $0.81$ & $^{\s\s5.05}_{\s\s7.02}$ & & $0.8965$ & $0.0049$ & $16.95$ & $0.64$ & $^{\s4.68}_{\s6.00}$ & & $1.656\S$ & $0.016\S$ & $0.557\S$ & $0.054\S$ & $^{0.150\s}_{0.159\s}$ \cr
+$0.5201$ & $0.0037$ & $\S17.08$ & $0.76$ & $^{\s\s4.78}_{\s\s6.63}$ & & $0.9133$ & $0.0048$ & $14.14$ & $0.58$ & $^{\s3.90}_{\s4.99}$ & & $1.713\S$ & $0.017\S$ & $0.464\S$ & $0.048\S$ & $^{0.124\s}_{0.130\s}$ \cr
+$0.5332$ & $0.0038$ & $\S16.07$ & $0.76$ & $^{\s\s4.49}_{\s\s6.22}$ & & $0.9305$ & $0.0051$ & $14.05$ & $0.56$ & $^{\s3.87}_{\s4.93}$ & & $1.777\S$ & $0.020\S$ & $0.369\S$ & $0.039\S$ & $^{0.099\s}_{0.101\s}$ \cr
+$0.5466$ & $0.0039$ & $\S16.86$ & $0.80$ & $^{\s\s4.71}_{\s\s6.50}$ & & $0.9481$ & $0.0051$ & $14.10$ & $0.57$ & $^{\s3.88}_{\s4.93}$ & & $1.851\S$ & $0.023\S$ & $0.216\S$ & $0.028\S$ & $^{0.058\s}_{0.058\s}$ \cr
+$0.5602$ & $0.0040$ & $\S18.46$ & $0.86$ & $^{\s\s5.16}_{\s\s7.10}$ & & $0.9662$ & $0.0054$ & $11.92$ & $0.49$ & $^{\s3.28}_{\s4.15}$ & & $1.932\S$ & $0.024\S$ & $0.192\S$ & $0.025\S$ & $^{0.051\s}_{0.050\s}$ \cr
+$0.5739$ & $0.0039$ & $\S18.26$ & $0.85$ & $^{\s\s5.10}_{\s\s7.00}$ & & $0.9852$ & $0.0056$ & $12.25$ & $0.49$ & $^{\s3.37}_{\s4.24}$ & & $2.024\S$ & $0.029\S$ & $0.126\S$ & $0.019\S$ & $^{0.033\s}_{0.032\s}$ \cr
+$0.5877$ & $0.0040$ & $\S20.77$ & $0.92$ & $^{\s\s5.80}_{\s\s7.94}$ & & $1.0047$ & $0.0056$ & $11.31$ & $0.47$ & $^{\s3.11}_{\s3.90}$ & & $2.133\S$ & $0.034\S$ & $0.059\S$ & $0.012\S$ & $^{0.015\s}_{0.014\s}$ \cr
+$0.6017$ & $0.0040$ & $\S22.85$ & $0.97$ & $^{\s\s6.37}_{\s\s8.70}$ & & $1.0242$ & $0.0056$ & $10.04$ & $0.44$ & $^{\s2.76}_{\s3.44}$ & & $2.272\S$ & $0.048\S$ & $0.0412$ & $0.0083$ & $^{0.0108}_{0.0095}$ \cr
+$0.6155$ & $0.0040$ & $\S22.24$ & $0.96$ & $^{\s\s6.20}_{\s\s8.44}$ & & $1.0441$ & $0.0058$ & $\S8.74$ & $0.40$ & $^{\s2.40}_{\s2.98}$ & & $2.443\S$ & $0.050\S$ & $0.0230$ & $0.0055$ & $^{0.0060}_{0.0049}$ \cr
+\multispan5&&\multispan5&&\multispan5\hrulefill\cr
+$0.6294$ & $0.0040$ & $\S24.2\S$ & $1.0\S$ & $^{\s\s6.8\s}_{\s\s9.2\s}$ & & $1.0647$ & $0.0061$ & $\S7.87$ & $0.37$ & $^{\s2.16}_{\s2.67}$ & \cr
+\multispan5\hrulefill&&\multispan5\hrulefill&&\multispan5\cr
 \end{tabular}
 \end{center}
 \end{largetable}
@@ -385,7 +419,7 @@ $\sigma_{\rm tot} = 98.6\un{mb} \pm 0\%^{\rm stat} \pm 0\%^{\rm syst}$ (details 
 
 \begin{largetable}
 \caption{Result summary. The right-most column gives the total systematic uncertainty, combined in quadrature and taking into account the correlations between the contributions.}
-\vskip-3mm
+%\vskip-3mm
 \label{results}
 \begin{tabular}{cccccccl}\hline
 quantity & value & statistical u. &\multispan5\hss systematic uncertainty\hss\cr\hline
@@ -471,6 +505,14 @@ Acknowledgements -- Insert here the text.
 \bibitem{compete} 
 	\Name{J.~R.~Cudell {\it et al.} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
+
+\bibitem{P2} 
+	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+
+\bibitem{P3} 
+	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
 
 
 %\bibitem{b.b}
