--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -42,7 +42,7 @@ G. Antchev\inst{(a)}, P. Aspell\inst{8}, I. Atanassov\inst{8,(a)}, V. Avati\inst
 	\inst{10} Penn State University, Department of Physics - University Park, PA, USA
 }
 
-\pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
+\pacs{13.60.Hb}{Total and inclusive cross-sections (including deep-inelastic processes)}
 
 
 \abstract{%
@@ -82,66 +82,74 @@ of (73.5 0.6stat +1.8
 %--------------------------------------------------
 \section{Introduction}
 
-TODO: Explain context of this paper, relation to papers 2 and 3.
+The study of elastic proton-proton scattering reveals many aspects about the structure of the proton, its shape and opacity, i.e.~matter density. It also tests the interplay of non-perturbative and perturbative $\rm pp$ interactions depending on the four-momentum transfer squared $t$ involved in the scattering process.
+% ($t = (p_{\rm i} - p_{\rm f})^2$ with $p_{\rm i,f}$  being the initial and final four-momentum, respectively). 
 
-TODO: Here, we used luminosity from CMS, lumi-independent results will come in paper 3.
+In several runs with different beam optics, TOTEM has measured at the LHC energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, extended over the $|t|$-range of $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential slope at low $|t|$ followed by a significant diffractive minimum and at larger $|t|$-values a behaviour compatible with the power law already observed at lower energies TODO: reference.
 
-TODO: Describe TOTEM - RP, T1, T2; Here only elastic scattering -- only RP -- bridge to the next chapter.
+To access smaller $|t|$-values ($|t| = 0.01\un{GeV^2}$ corresponds at the LHC ($7\un{TeV}$) to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radiants. This can be obtained by either reducing the beam emittance $\epsilon$ or by increasing the betatron value $\beta^*$ (beam divergence $\propto\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$) in a special run, TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section by the use of the optical theorem.
+
+In this paper, we concentrate on an improved larger statistic measurement of the $t$-distribution at even smaller $t$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put aggressively close to the beam center ($4.8 \hbox{ to } 6.5\, \sigma_{\rm beam}$). This was possible since in this run the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot had to touch this sharp beam edge. After retraction of 1 to 2 beam sigmas, TOTEM took data in very clean conditions with only few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$. Thanks to that we could observe $91\%$ of the elastic cross-section -- compared to only $67\%$ in paper \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem we dervied the total and inelastic cross-sections too. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated.
+
+In a second adjacent paper \cite{P2}, the inelastic cross-section is measured directly, based on the trigger of the forward inelastic detectors. By comparison with the inelastic cross-section, obtained from the difference of the total and the elastic cross-sections, an estimate of the single diffraction at masses below $3\un{GeV}$ that escape our detection is given.
+
+The third paper \cite{P3} summarises the different cross-section methods including the luminosity independent determination of the total cross-section. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scatterin amplitude at $t=0$) does not enter in the method of the 2nd paper \cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted confirming the more detector-dependent estimates of CMS. 
+
+%--------------------------------------------------
+\section{The proton detectors}
+
+The configuration of the TOTEM Roman Pot system and the silicon detector properties were already described in more detail in \cite{jinst} and the first two papers \cite{epl95,epl96}. For the understanding of the analysis, a few basic  system  properties are repeated. 
+
+The silicon sensors are placed in movable beam-pipe insertions -- Roman Pots (RP) -- located symmetrically on either side of the LHC interaction point IP5 at distances of $215$ -- $220\un{m}$ from the IP.
+
+Each RP station is composed of two units (near and far) separated by a distance of about $5\un{m}$. A unit consists of 3 RPs, two approaching the outgoing beam vertically from the top and the bottom and one horizontally. Each RP is equipped with a stack of 10 silicon strip detectors measuring the proton distance to the beam center in both coordinates in the plane perpendicular to the beam with a precision of $19\un{\mu m}$ (TODO: verify with Hubert). The RPs are moved from the garage position towards the beam center with a precision of $20\un{\mu m}$ (TODO: verify with Mario). The movement and the alignment of all pots are monitored with a precision of less than $20\un{\mu m}$ based on track reconstruction and external alignment tools.
+
+The large lever arm between the near and the far unit allows the determination of the scattering angle in both projections with a precision about $5\un{\mu rad}$. The knowledge of both the positions and the scattering angles are vital in the analysis. 
+
 
 
 %--------------------------------------------------
-\section{Proton measurement with Roman Pots}
+\section{LHC Optics}
 
-\subsection{Roman Pot system}
-
-TODO: Describe the system of RPs: stations, units, ...
-
-TODO: The measurement is performed with the vertical RPs in $220\un{m}$ stations only -- the concept of two diagonals
-
-\subsection{Optics}
-
-Elastic proton transport for $\beta^* = 90\un{m}$ optics:
-
+The measurement presented in this paper was performed with the $\beta^*=90\un{m}$ optics, which was described in detail in \cite{epl96}; here we repeat the most important properties only. An elastic proton created at the vertex $(x^*, y^*)$ with the horizontal and vertical scattering angles $(\theta_x^*, \theta_y^*)$ is transported through the LHC magnet lattice and hits the Roman Pots at points $(x, y)$:
 \begin{equation}
-\label{transport}
-x^{\rm N} = L_x\,\theta^*_x + v_x\,x^*\ ,\ 
-x^{\rm F} = v_x\,x^*\ ,\ 
-y = L_y\,\theta^*_y + v_y\,y^*
+\label{eq:transport}
+\begin{array}{rcl}
+x = L_x\,\theta^*_x + v_x\,x^*\ &,\quad& y = L_y\,\theta^*_y + v_y\,y^* \\
+L_x = 2.9\un{m} \hbox{ (near)}&,\quad& L_y = 240\un{m} \hbox{ (near)}\\
+L_x \approx 0\un{m} \hbox{ (far)}&,\quad& L_y = 260\un{m}\hbox{ (far)}\\
+\end{array}
 \end{equation}
-
-
-TODO: brief description of optics, refer to \cite{epl96} where details are discussed
-
-TODO: define $\xi$
-
-Kinematics reconstruction from one-arm measurement:
+Since $L_x \approx 0$ in the far RP, the corresponding horizontal hit position can be used for vertex $x^*$ determination:
 \begin{equation}
-\label{reconstruction}
+\label{eq:reconstruction}
 x^* = {x^{\rm F}\over v_x}\ ,\quad
 \theta^*_x = {1\over {\d L_x\over \d s}} \left( \theta_x - {\d v_x\over \d s} x^* \right)\ ,\quad
 \theta^*_y = {y\over L_y}\ .
 \end{equation}
+The proposed angular-reconstruction formulae optimize the robustness against optics imperfections \cite{epl96}.
 
-For elastic events, we averaged the angles reconstructed from left and right arms, which further reduces the uncertainty.
 
 %--------------------------------------------------
 \section{Data taking}
 
-The presented date were recorded during fill 2232 on 10 October 2011, using $\beta^* = 90\un{m}$ optics. For this analysis, only one bunch-pair was used (with populations $5\cdot10^{10}$ and $6\cdot10^{10}$ protons). This bunch-pair produced an instantaneous luminosity dropping from about $6.9$ to $4.3\un{mb^{-1} s^{-1}}$ during the run.
+The presented data were recorded in October 2011 with the $\beta^* = 90\un{m}$ optics. For this analysis, only one bunch pair was used with an average proton population of $5\cdot10^{10}$ protons/bunch producing an instantaneous luminosity of $6\un{mb^{-1} s^{-1}}$ and an average minimum bias interaction rate of $0.01$ per bunch crossing.
 
-Several trigger schemes were used in the data-taking. For this analysis, the essential one was the RP trigger -- requiring a track-segment in any of the RPs, in at least one of the transverse projections $u$ and $v$, but simultaneously at both arms of the experiment. In order to determine various efficiency corrections, we profited from a zero-bias trigger -- triggering on random bunch-crossings. 
+During the run three data sets were taken with different RP distances to the beam center corresponding to minimum values of the four-momentum transfer squared between $4.6$ and $7.3\cdot10^{-3}\un{GeV^2}$. The different data sets enabled us to quantify and reduce certain systematic uncertainties. A run summary is given in Tab.~\ref{tab:datasets}.
 
-During the run, the Roman Pots (RPs) were driven to three different distances from the beam -- see Tab.~\ref{datasets}. While most of the statistics falls into the first dataset, the other two allowed us to measure $|t|$ values down to $4.6\cdot10^{-3}\un{GeV^2}$. Having three different datasets has enabled us to quantify and reduce certain systematic uncertainties.
+The 1st-level trigger benefits from the 20 hits per proton track and is based on a track segment either in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side is requested in the typical elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristic of the $\beta^* = 90\un{m}$ optics forces the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
-\caption{Description of the three datasets available. The RP position gives the RP approach to beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. The $\mathcal{L}_{\rm eff}$ gives the effective (taking into account the DAQ efficiency) luminosity for each dataset. The last column shows the lowest $|t|$ values reached.}
-\label{datasets}
+\caption{Description of the three datasets available. The RP position gives the RP approach to beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. The $\mathcal{L}_{\rm int}$ gives the integrated
+%effective (taking into account the DAQ efficiency)
+luminosity for each dataset. The last column shows the lowest $|t|$ values reached.}
+\label{tab:datasets}
 \begin{center}
 \vskip-3mm
 \begin{tabular}{ccccc}\hline
-& RP & elastic                   & $\mathcal{L}_{\rm eff}$ & $|t|_{\rm min}$     \cr
+& RP & elastic                   & $\mathcal{L}_{\rm int}$ & $|t|_{\rm min}$     \cr
 \omit\hss\vbox to 0pt{\vss\hbox{\ dataset\ }\vss}\hss &\multispan4 \cr
- &  position &  events                   & $\unt{mb^{-1}}$         & $\unt{GeV^2}$       \cr\hline
+ &  position &  events                   & $\unt{\mu b^{-1}}$         & $\unt{GeV^2}$       \cr\hline
 1 & $6.5\,\sigma_{\rm beam}$ & 841k      & $68.2$                  & $7.3\cdot10^{-3}$ \cr
 2 & $5.5\,\sigma_{\rm beam}$ & 106k      & $8.2$                   & $5.7\cdot10^{-3}$ \cr
 3 & $4.8\,\sigma_{\rm beam}$ & 89k       & $6.6$                   & $4.6\cdot10^{-3}$ \cr\hline
@@ -153,32 +161,37 @@ During the run, the Roman Pots (RPs) were driven to three different distances fr
 %--------------------------------------------------
 \section{Analysis}
 
-The analysis is very similar the one of \cite{epl96}. Before describing the steps, let us anticipate that all datasets were analyzed separately. Moreover, most of the steps are performed independently for the two diagonals. In this way, we gained a better control of the systematics.
+The analysis is very similar the one of \cite{epl96}. Here, we take advantage of having three datasets (each with two diagonal) analyzed separately, thus leading to a better control over the systematics.
+
 
 %-------------------------
 \subsection{Alignment}
 
-Three complementary methods were applied. First, the RP motor control was calibrated in a beam-touching exercise. Then, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Since the elastic event tagging does not require precise alignment, we could use an elastic pre-selection for alignment fine-tuning. By exploiting the azimuthal symmetry of elastic scattering and taking advantage of the very small effective length $L_x$, we could adjust the horizontal and vertical shifts and the tilt of each unit. The effect of residual misalignments on $\d\sigma_{\rm el}/\d t$ was thus smaller than $0.3\%$ for every $t$-bin.
+Three complementary methods were applied. First, the RP position was roughly determined from the beam-edge touching. Then, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Since the elastic event tagging does not require precise alignment, we could use an elastic pre-selection for alignment fine-tuning. By exploiting the azimuthal symmetry of elastic scattering%
+%and taking advantage of the very small effective length $L_x$
+, we could adjust the horizontal and vertical shifts and the tilt of each unit. The effect of residual misalignments on $\d\sigma_{\rm el}/\d t$ was thus smaller than $0.3\%$ for every $t$-bin.
+
 
 %-------------------------
 \subsection{Elastic tagging}
 
-The cuts used to select the elastic events are summarized in Tab.~\ref{cuts}. The cuts 1 and 2 require the reconstructed track collinearity between the left and right arms. The cuts 3-6 effectively work as low-$\xi$ cuts. If $\xi$ is non-negligible, the vertex ($x^*$) reconstruction Eq.~\ref{reconstruction} is broken. So is the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$). The cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{hit dist}.
+The cuts used to select the elastic events are summarized in Tab.~\ref{cuts}. The cuts 1 and 2 require the reconstructed track collinearity between the left and right arms. The cuts 3-6 effectively work as low-$\xi$ cuts ($\xi$ denotes the fractional momentum loss of a proton). If $\xi$ is non-negligible, the vertex ($x^*$) reconstruction Eq.~\ref{eq:reconstruction} becomes invalid. Similarly, the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$) is lost. The cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
-\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units. TODO: threshold = 1 sigma, cuts applied at 3 sigma}
+\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units. The constant $\alpha = L_y^{\rm F} / L_y^{\rm N} - 1 \approx 0.11$. The right-most column gives the RMS of the cut distribution ($\equiv 1\sigma$), all cuts are applied at $3\sigma$-level.
+}
 \label{cuts}
 \begin{center}
 \begin{tabular}{ccc}\hline
-number & cut & threshold\cr\hline
+number & cut & RMS\cr\hline
 diagonal &\multispan2 \hss track reconstructed in all 4 diagonal RPs \hss \cr
-1 & $\theta_x^{*\rm R}$ vs. $\theta_x^{*\rm L}$		& $9.2\un{\mu rad}$	\cr
-2 & $\theta_y^{*\rm R}$ vs. $\theta_y^{*\rm L}$		& $3.5\un{\mu rad}$	\cr
+1 & $\theta_x^{*\rm R} - \theta_x^{*\rm L}$		& $9.2\un{\mu rad}$	\cr
+2 & $\theta_y^{*\rm R} - \theta_y^{*\rm L}$		& $3.5\un{\mu rad}$	\cr
 3 & $|x^{*\rm R}|$ 									& $200\un{\mu m}$	\cr
 4 & $|x^{*\rm L}|$ 									& $200\un{\mu m}$	\cr
-5 & $y^{\rm R,N}$ vs.~$y^{\rm R,F} - y^{\rm R,N}$	& $17\un{\mu m}$	\cr
-6 & $y^{\rm R,N}$ vs.~$y^{\rm L,F} - y^{\rm L,N}$	& $17\un{\mu m}$	\cr
-7 & $x^{*\rm R}$ vs. $x^{*\rm L}$					& $9\un{\mu m}$ 	\cr\hline
+5 & $\alpha\,y^{\rm R,N} - (y^{\rm R,F} - y^{\rm R,N})$	& $17\un{\mu m}$	\cr
+6 & $\alpha\,y^{\rm L,N} - (y^{\rm L,F} - y^{\rm L,N})$	& $17\un{\mu m}$	\cr
+7 & $x^{*\rm R} - x^{*\rm L}$					& $9\un{\mu m}$ 	\cr\hline
 \end{tabular}
 \end{center}
 \end{table}
@@ -187,8 +200,9 @@ diagonal &\multispan2 \hss track reconstructed in all 4 diagonal RPs \hss \cr
 %-------------------------
 \subsection{Kinematics reconstruction}
 
-The scattering angles were reconstructed according to Eq.~\ref{reconstruction}. The optics uncertainties for (one-arm) $\theta^*_x$ and $\theta^*_y$ reconstruction were $1.3\%$ and $0.8\%$ respectively. The former one has a more pronounced effect on $\d\sigma_{\rm el}/\d t$ (due to higher value and no acceptance cut in $\theta^*_x$) and is the leading systematic uncertainty for larger $|t|$ values, cf.~Tab.~\ref{systematics}.
+The scattering angles were reconstructed for each arm according to Eq.~\ref{eq:reconstruction}. The corresponding uncertainties were $1.3\%$ and $0.8\%$ for $\theta^*_x$ and $\theta^*_y$ respectively. The former one has a more pronounced effect on $\d\sigma_{\rm el}/\d t$ (due to higher value and no acceptance cut in $\theta^*_x$) and is the leading systematic uncertainty for larger $|t|$ values, cf.~Tab.~\ref{systematics}.
 
+For elastic events, we averaged the angles reconstructed from left and right arms, which leads to an uncertainty reduction.
 
 %-------------------------
 \subsection{Background}
@@ -199,7 +213,7 @@ The background contribution (i.e.~all non-elastic events passing the selection c
 %-------------------------
 \subsection{Acceptance correction}
 
-We identified two acceptance limitations: the detector edge (relevant for lower $|t|$) and the LHC aperture limitation shown in Fig.~\ref{hit dist} right (relevant for higher $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty on a reasonable level, we constrained ourselves to the region where the full acceptance correction was no larger than 7.5 (considering both diagonals).
+We identified two acceptance limitations: the detector edge (relevant for lower $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist} right (relevant for higher $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty on a reasonable level, we constrained ourselves to the region where the full acceptance correction was no larger than 7.5 (considering both diagonals).
 
 
 %-------------------------
@@ -217,7 +231,7 @@ The efficiency of the RP trigger was estimated using the zero-bias data stream. 
 
 The DAQ efficiency was determined by comparing the numbers of triggered and recorded events, yielding $(98.142 \pm 0.001)\%$.
 
-There are several reasons for reconstruction inefficiency: intrinsic RP detection inefficiency of each silicon sensor, proton interaction with the material of a RP and ``pile-up'' of several protons in one event (RPs can fully reconstruct at most one track). For the last case, the most important situation is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{hit dist}.
+There are several reasons for reconstruction inefficiency: intrinsic RP detection inefficiency of each silicon sensor, proton interaction with the material of a RP and ``pile-up'' of several protons in one event (RPs can fully reconstruct at most one track). For the last case, the most important situation is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
 
 Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts (only cut 2 can be kept then) and counting the recuperated events. The result of this study was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near pot that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$.
 % confirmation from MC simulations.
@@ -229,38 +243,40 @@ The ``pile-up'' inefficiency was determined from the zero-bias data stream by ev
 \begin{center}
 \includegraphics{fig/hit_dist.pdf}
 \vskip-5mm
-\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{cuts}). The left plot clearly indicates the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in right plot is sharply cut at about $|y| = 29\un{mm}$ which is a consequence of the LHC aperture limitations. }
-\label{hit dist}
+\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{cuts}). The left plot clearly indicates the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ which is a consequence of the LHC aperture limitations. }
+\label{fig:hit dist}
 \end{center}
 \end{figure*}
 
 %-------------------------
 \subsection{Luminosity}
 
-TODO: Lumi from CMS, 4\% uncertainty, Ken's pedestal subtraction
+In this paper, we use the luminosity measured by CMS with a $4\%$-uncertainty estimate (no dedicated low-luminosity performance studies have been performed). Luminosity-independent results will be given in the adjacent paper \cite{P3}.
 
-\subsection{Extrapolation to $t=0\,\rm GeV^2$}
+% Ken's pedestal subtraction
 
-The elastic differential cross section was extrapolated to zero with the following parameterization:
+\subsection{Extrapolation to $t=0$}
+
+The elastic differential cross-section was extrapolated to zero with the following parameterization:
 \begin{equation}
-\label{extrapolation}
+\label{eq:extrapolation}
 {\d\sigma_{\rm el}\over \d t} = \left. {\d\sigma_{\rm el}\over \d t}\right|_{t=0} \ \e^{-B|t|}\ .
 \end{equation}
-The fits were performed from the lowest accessible $|t|$ values (see $|t|_{\rm min}$ in Tab.~\ref{datasets}) to $|t| = 0.2\un{GeV^2}$, with a typical $\chi^2/\hbox{n.d.f.}$ of $1.2$ -- see for example the black line in Fig.~\ref{dsdt}.
+The fits were performed from the lowest accessible $|t|$ values (see $|t|_{\rm min}$ in Tab.~\ref{tab:datasets}) to $|t| = 0.2\un{GeV^2}$, with a typical $\chi^2/\hbox{n.d.f.}$ of $1.2$ -- see for example the black line in Fig.~\ref{dsdt}.
 
 %-------------------------
 \section{Systematic uncertainty calculation}
 
-%TODO: Statistical uncertainty negligible, see Tab.~\ref{results}.
+% Statistical uncertainty negligible, see Tab.~\ref{results}.
 
 For each of the analysis steps above, the systematic uncertainty was determined, and their combination was studied with a Monte-Carlo simulation. We treated separately analysis $t$-dependent, analysis $t$-independent (normalization) and luminosity uncertainties, the results are shown in Tab.~\ref{systematics}. Since there is a number of contributions in each category, we combined the uncertainties in quadrature. So we did for the total uncertainty.
 
-The luminosity uncertainty is the leading systematic effect for $|t| < 0.2\un{GeV^2}$, above that it is the uncertainty of $\d L_x/\d s$ which dominates. The optics-related error contribution is almost vanishing around $|t| = 0.06\un{GeV^2}$ and has opposite signs left and right of that point. Therefore there is a partial error cancellation in the integrated elastic cross section. Consequently the relative error of $\sigma_{\rm el}$ is significantly lower than the one of $\d\sigma_{\rm el}/\d t|_0$ -- see Tab.~\ref{results}.
+The luminosity uncertainty is the leading systematic effect for $|t| < 0.2\un{GeV^2}$, above that it is the uncertainty of $\d L_x/\d s$ which dominates. The optics-related error contribution is almost vanishing around $|t| = 0.06\un{GeV^2}$ and has opposite signs left and right of that point. Therefore there is a partial error cancellation in the integrated elastic cross-section. Consequently the relative error of $\sigma_{\rm el}$ is significantly lower than the one of $\d\sigma_{\rm el}/\d t|_0$ -- see Tab.~\ref{results}.
 
 The Monte-Carlo simulation confirms that there is a strong correlation between the errors of $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$ -- the correlation coefficient is $0.76$ (when both $t$-dependent and normalization contributions are included).
 
 \begin{largetable}
-\caption{Overview of systematic uncertainties}
+\caption{Overview of the systematic uncertainties of the differential cross-section $\d\sigma_{\rm el}/\d t$.}
 %\vskip-3mm
 \label{systematics}
 \begin{tabular}{cccccccccc}\hline
@@ -277,7 +293,7 @@ total &	4.5\% &	4.3\% &	4.2\% &	4.3\% &	4.3\% &	5.1\% &	6.1\% &	9.3\% &	12.9\% \
 %--------------------------------------------------
 \section{Results}
 
-The differential cross section results obtained from different datasets and different diagonals match perfectly with each other and with our previous publication \cite{epl95}. Merging the data from all datasets and diagonals gives the differential cross section presented in Fig.~\ref{dsdt} and Tab.~\ref{data low t}. Let us note that the first (second) lowest $|t|$ bin comes from the dataset 3 (datasets 2 and 3) only -- that is why these bins have significantly higher statistical uncertainty.
+The differential cross-section results obtained from different datasets and different diagonals match perfectly with each other and with our previous publication \cite{epl95}. Merging the data from all datasets and diagonals gives the differential cross-section presented in Fig.~\ref{dsdt} and Tab.~\ref{data low t}. Let us note that the first (second) lowest $|t|$ bin comes from the dataset 3 (datasets 2 and 3) only -- that is why these bins have significantly higher statistical uncertainty.
 
 Tab.~\ref{data low t} gives a representative $t$ value for each bin. These points were determined from the requirement that bin-based and point-based $\chi^2$ minimizations would lead to identical results \cite{lafferty94}. In practice, each bin $B_i$ of width $w_i$ is represented by $t_i$ value that fulfils $f(t_i) = {1\over w_i} \int_{B_i} f(\tau)\, \d\tau$, where $f(t)$ stands for the $t$-distribution. The uncertainties of the representative points $t_i$ come from the uncertainty of the $f(t)$ determination (fit). Even considering both statistical (bin fluctuations) and systematic (different fit parameterizations) gives negligible uncertainties on the representative $t$-values (relative uncertainties smaller than $10^{-4}$).
 
@@ -294,7 +310,8 @@ Tab.~\ref{data medium t} gives the $\d\sigma_{\rm el}/\d t$ continuation to high
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/dsdt_comp.pdf}
-\caption{The measured elastic differential cross section. TODO: more description?}
+\vskip-5mm
+\caption{A compilation of the elastic differential cross-section measurements by TOTEM. Each measurement is shown in different color. The embedded figure provides a zoom of a low-$|t|$ region, showing the lowest $|t|$-values accessible in the analysis from Ref.~\cite{epl96} (green) and this analysis (red).}
 \label{dsdt}
 \end{center}
 \end{figure*}
@@ -302,7 +319,7 @@ Tab.~\ref{data medium t} gives the $\d\sigma_{\rm el}/\d t$ continuation to high
 \setlength{\tabcolsep}{3.8pt}
 
 \begin{largetable}
-\caption{The elastic differential cross section determined in this analysis. Some details on the systematic uncertainty calculation can be found in Tab.~\ref{systematics}. That table can also be used to evaluate the correlations of the systematic uncertainties among the bins (the three contributions are independent).}
+\caption{The elastic differential cross-section determined in this analysis. Some details on the systematic uncertainty calculation can be found in Tab.~\ref{systematics}. That table can also be used to evaluate the correlations of the systematic uncertainties among the bins (the three contributions are independent).}
 \label{data low t}
 \begin{center}
 %\vskip-3mm
@@ -351,7 +368,7 @@ $0.0477\S$ & $197.2$ & $\S1.3$ & $\S8.3$ && $0.109\S$ & $\S58.11$ & $0.55$ & $2.
 
 
 \begin{largetable}
-\caption{The elastic differential cross section as determined in \cite{epl95}. The systematic errors almost fully correlated among the bins.
+\caption{The elastic differential cross-section as determined in \cite{epl95}. The systematic errors almost fully correlated among the bins.
 %systematic uncertainties evaluated for three $|t|$ values: $^{+25}_{-37}\%$ at $|t|=0.4\un{GeV^2}$, $^{+28}_{-39}\%$ at $0.5\un{GeV^2}$ and $^{+27}_{-30}\%$ at $1.5\un{GeV^2}$.
 }
 \label{data medium t}
@@ -402,12 +419,12 @@ $0.6294$ & $0.0040$ & $\S24.2\S$ & $1.0\S$ & $^{\s\s6.8\s}_{\s\s9.2\s}$ & & $1.0
 
 
 
-By extrapolating the differential cross section to $t=0$ (see Eq.~\ref{extrapolation}), we determined the intercept
+By extrapolating the differential cross-section to $t=0$ (see Eq.~\ref{eq:extrapolation}), we determined the intercept
 $\d\sigma_{\rm el}/\d t|0 = 506\un{mb} \pm 1.7\%^{\rm stat} \pm 4.5\%^{\rm syst}$ and elastic slope
-$B = 19.9\un{GeV^{-2}} \pm 0.2\%^{\rm stat} \pm 1.3\%^{\rm syst}$ -- details on the uncertainty composition can be found in Tab.~\ref{results}. Let us remark that we observe no indication of $B$ changing for $|t| < 0.2\un{GeV^2}$. We used the extrapolation to calculate the integrated elastic cross section
-$\sigma_{\rm el} = 25.4\un{mb} \pm 0.1\%^{\rm stat} \pm 4.2\%^{\rm syst}$. Compared to our previous publication \cite{epl96}, the ratio of extrapolated to observed elastic cross section was reduced from $50$ to $10\%$ (due to a very close RP approach to the beam).
+$B = 19.9\un{GeV^{-2}} \pm 0.2\%^{\rm stat} \pm 1.3\%^{\rm syst}$ -- details on the uncertainty composition can be found in Tab.~\ref{results}. Let us remark that we observe no indication of $B$ changing for $|t| < 0.2\un{GeV^2}$. We used the extrapolation to calculate the integrated elastic cross-section
+$\sigma_{\rm el} = 25.4\un{mb} \pm 0.1\%^{\rm stat} \pm 4.2\%^{\rm syst}$. Compared to our previous publication \cite{epl96}, the ratio of extrapolated to observed elastic cross-section was reduced from $50$ to $10\%$ (due to a very close RP approach to the beam).
 
-The optical theorem permits to calculate the total and inelastic cross sections:
+The optical theorem permits to calculate the total and inelastic cross-sections:
 \begin{equation}
 \label{si tot}
 \sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,\qquad
@@ -463,13 +480,15 @@ TODO: planning to repeat the measurement at $\sqrt s = 8\un{TeV}$
 
 \begin{figure}
 \onefigure{fig/B_s.pdf}
-\caption{Figure caption.}
+\vskip-5mm
+\caption{(Color online) The elastic slope $B$ (see Eq.~\ref{eq:extrapolation}) as a function of the scattering energy $\sqrt s$.}
 \label{fig.1}
 \end{figure}
 
 \begin{figure}
 \onefigure{fig/sigma_el_to_sigma_tot.pdf}
-\caption{Figure caption.}
+\vskip-5mm
+\caption{(Color online) The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. TODO: fit ??}
 \label{fig.1}
 \end{figure}
 
@@ -484,15 +503,15 @@ Acknowledgements -- Insert here the text.
 %--------------------------------------------------
 \begin{thebibliography}{0}
 
-\bibitem{epl96}
-    %First measurements of the total proton-proton cross section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
-	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
-
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
+
+\bibitem{epl96}
+    %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
+	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
 
 \bibitem{jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
